force-app/main/default/objects/Work_Order_Files__c/Work_Order_Files__c.object-meta.xml
<CustomObject>
    <description>Custom object to store the AWS S3 URL of image files uploaded by Field Service Technician from SFS Mobile app</description>
    <label>Work Order Files</label>
    <nameField>
        <displayFormat>WOF-{00000}</displayFormat>
        <label>Work Order Files Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>