force-app/main/default/objects/Work_Order_Files__c/fields/AWS_S3_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>AWS_S3_Error_Message__c</fullName>
    <label>AWS S3 Error Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>