force-app/main/default/objects/Work_Order_Files__c/fields/AWS_S3_File_Path__c.field-meta.xml
<CustomField>
    <fullName>AWS_S3_File_Path__c</fullName>
    <label>AWS S3 File Path</label>
    <type>TextArea</type>
</CustomField>