force-app/main/default/objects/Work_Order_Files__c/fields/AWS_S3_File_Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>AWS_S3_File_Upload_Status__c</fullName>
    <label>AWS S3 File Upload Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>