force-app/main/default/objects/Work_Order_Files__c/fields/File_Size__c.field-meta.xml
<CustomField>
    <fullName>File_Size__c</fullName>
    <label>File Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>