force-app/main/default/objects/Work_Order_Files__c/fields/Image_Type__c.field-meta.xml
<CustomField>
    <fullName>Image_Type__c</fullName>
    <label>Image Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair Images</fullName>
            </value>
            <value>
                <fullName>Face Plate Images</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>